--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -12,6 +12,9 @@
         <main>
             <div>
                 <h1>My Projects</h1>
+                <p>
+                    <a href = "{% url 'create_project' %}">Create a new project</a>
+                </p>
                 {% if list_view %}
                     <table>
                         <thead>
