--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -14,6 +14,9 @@
                 <h1>{{ project_object.name }}</h1>
                 <p>{{ project_object.description }}</p>
                 <h2>Task</h2>
+                <p>
+                    <a href = "{% url 'create_task' %}">Create a new task</a>
+                </p>
                 {% if task %}
                     <table>
                         <thead>
