--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -9,44 +9,71 @@
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <main>
-            <div>
-                <h1>{{ project_object.name }}</h1>
-                <p>{{ project_object.description }}</p>
-                <h2>Task</h2>
-                <p>
-                    <a href = "{% url 'create_task' %}">Create a new task</a>
-                </p>
-                {% if task %}
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Assignee</th>
-                                <th>Start date</th>
-                                <th>Due date</th>
-                                <th>Is completed</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for tasks in task %}
-                                <tr>
-                                    <td>{{ tasks.name }}</td>
-                                    <td>{{ tasks.assignee }}</td>
-                                    <td>{{ tasks.start_date }}</td>
-                                    <td>{{ tasks.due_date }}</td>
-                                    <td>{{ tasks.is_completed | yesno:"yes,no" }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                {% else %}
-                    <p>This project has no tasks</p>
+        <header>
+            <nav>
+                <nav>
+                    <ul>
+                        {% if user.is_authenticated %}
+                            <li>
+                                <a href="{% url 'show_my_tasks' %}">My tasks</a>   </a>
+                            </li>
+                            <li>
+                                <a href="{% url 'list_projects' %}">My projects</a>   </a>
+                            </li>
+                            <li>
+                                <a href="{% url 'logout' %}">Log out</a>   </a>
+                            </li>
+                        </ul>
+                    {% else %}
+                        <li>
+                            <a href="{% url 'login' %}">Login</a>   </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'signup' %}">Signup</a>   </a>
+                        </li>
+                    </ul>
                 {% endif %}
-            </div>
-        </main>
-        <script src="index.js"></script>
-    </body>
+            </nav>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h1>{{ project_object.name }}</h1>
+            <p>{{ project_object.description }}</p>
+            <h2>Task</h2>
+            <p>
+                <a href = "{% url 'create_task' %}">Create a new task</a>
+            </p>
+            {% if task %}
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Assignee</th>
+                            <th>Start date</th>
+                            <th>Due date</th>
+                            <th>Is completed</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for tasks in task %}
+                            <tr>
+                                <td>{{ tasks.name }}</td>
+                                <td>{{ tasks.assignee }}</td>
+                                <td>{{ tasks.start_date }}</td>
+                                <td>{{ tasks.due_date }}</td>
+                                <td>{{ tasks.is_completed | yesno:"yes,no" }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p>This project has no tasks</p>
+            {% endif %}
+        </div>
+    </main>
+    <script src="index.js"></script>
+</body>
 </html>
 {% comment %} 
  <tr>
