--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -9,37 +9,62 @@
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <main>
-            <div>
-                <h1>My Projects</h1>
-                <p>
-                    <a href = "{% url 'create_project' %}">Create a new project</a>
-                </p>
-                {% if list_view %}
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Number of tasks</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for i in list_view %}
-                                <tr>
-                                    <td>
-                                        <a href="{% url 'show_project' i.id %}">{{ i.name }}</a>
-                                    </td>
-                                    <td>{{ i.tasks.all|length }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+        <header>
+            <nav>
+                <ul>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{% url 'show_my_tasks' %}">My tasks</a>   </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'list_projects' %}">My projects</a>   </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'logout' %}">Log out</a>   </a>
+                        </li>
+                    </ul>
                 {% else %}
-                    <p>You are not assigned to any projects</p>
-                {% endif %}
-                {% comment %}  list_views in from projects/urls.py {% endcomment %}
-            </div>
-        </main>
-        <script src="index.js"></script>
-    </body>
+                    <li>
+                        <a href="{% url 'login' %}">Login</a>   </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'signup' %}">Signup</a>   </a>
+                    </li>
+                </ul>
+            {% endif %}
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h1>My Projects</h1>
+            <p>
+                <a href = "{% url 'create_project' %}">Create a new project</a>
+            </p>
+            {% if list_view %}
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Number of tasks</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for i in list_view %}
+                            <tr>
+                                <td>
+                                    <a href="{% url 'show_project' i.id %}">{{ i.name }}</a>
+                                </td>
+                                <td>{{ i.tasks.all|length }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p>You are not assigned to any projects</p>
+            {% endif %}
+            {% comment %}  list_views in from projects/urls.py {% endcomment %}
+        </div>
+    </main>
+    <script src="index.js"></script>
+</body>
 </html>
