--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -9,36 +9,61 @@
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <main>
-            <div>
-                <h1>My Tasks</h1>
-                {% if task_list %}
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Assignee</th>
-                                <th>Start date</th>
-                                <th>Due date</th>
-                                <th>Is completed</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for j in task_list %}
-                                <tr>
-                                    <td>{{ j.name }}</td>
-                                    <td>{{ j.start_date }}</td>
-                                    <td>{{ j.due_date }}</td>
-                                    <td>{{ j.is_completed | yesno:"yes,no" }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+        <header>
+            <nav>
+                <ul>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="{% url 'show_my_tasks' %}">My tasks</a>   </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'list_projects' %}">My projects</a>   </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'logout' %}">Log out</a>   </a>
+                        </li>
+                    </ul>
                 {% else %}
-                    <p>You have no tasks</p>
-                {% endif %}
-            </div>
-        </main>
-        <script src="index.js"></script>
-    </body>
+                    <li>
+                        <a href="{% url 'login' %}">Login</a>   </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'signup' %}">Signup</a>   </a>
+                    </li>
+                </ul>
+            {% endif %}
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h1>My Tasks</h1>
+            {% if task_list %}
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Assignee</th>
+                            <th>Start date</th>
+                            <th>Due date</th>
+                            <th>Is completed</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for j in task_list %}
+                            <tr>
+                                <td>{{ j.name }}</td>
+                                <td>{{ j.start_date }}</td>
+                                <td>{{ j.due_date }}</td>
+                                <td>{{ j.is_completed | yesno:"yes,no" }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p>You have no tasks</p>
+            {% endif %}
+        </div>
+    </main>
+    <script src="index.js"></script>
+</body>
 </html>
